    legacy-encoded clusters. (Closes: #505785)
  * t/052_upgrade_encodings.t: Test cases for pg_upgradecluster default and
    explicit encoding behaviour.
  * debian/init.d-functions: Use --force for forcefully stopping a running
    cluster for "restart" init.d operation as well. Otherwise restart is not
    guaranteed to succeed and could hang on existing connections.
    (Closes: #481359)

 -- Martin Pitt <mpitt@debian.org>  Sun, 16 Nov 2008 11:36:59 +0100

postgresql-common (91) unstable; urgency=low

  * Update Brazilian Portugese debconf translations, thanks Eder L. Marques!
    (Closes: #493031)
  * Add Romanian debconf translations, thanks Igor Stirbu!
    (Closes: #491823)
  * debian/control: Bump Standards-Version (no changes necessary).

 -- Martin Pitt <mpitt@debian.org>  Sat, 06 Sep 2008 10:44:15 +0200

postgresql-common (90) unstable; urgency=low

  * Update Swedish debconf translations, thanks Martin Bagge!
    (Closes: #490677)
  * Add Turkish debconf translations, thanks Mert Dirik!
    (Closes: #491007)
  * Update Vietnamese debconf translations, thanks Clytie Siddall!
    (Closes: #491048)
  * Update Russian debconf translations, thanks Sergey Alyoshin!
    (Closes: #491420)
  * PgCommon.pm, change_ugid(): Use /usr/bin/id instead of manual parsing with
    getgrent(), which is reportedly magnitudes faster for environments with
    a large number of groups in remote databases. Thanks to Rodrigo Gallardo!
    (Closes: #491136)
  * debian/postgresql-common.postinst: Update root.crt header comment for
    PostgreSQL 8.3. (Closes: #491276)
  * pg_ctlcluster: Fix typo in pg_ctl error messages. Thanks to Aaron Schrab!
    (Closes: #488280)
  * pg_createcluster, pg_ctlcluster: Set the log file group to "adm" if
    the cluster is owned by a system user (like "postgres"). In the "owned by
    human user" case, keep it as that user's primary group. Check both cases in
    the test suite. (Closes: #483017)